--- a/experiment/experiments.ipynb
+++ b/experiment/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['carat', 'depth', 'table', 'x', 'y', 'z'], dtype='object')"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['cut', 'color', 'clarity'], dtype='object')"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +175,7 @@
        "         3.        ,  1.        ]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,17 +186,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train=pd.DataFrame(preprocessor.fit_transform(X_train),columns=preprocessor.get_feature_names_out())\n",
-    "X_test=pd.DataFrame(preprocessor.transform(X_test),columns=preprocessor.get_feature_names_out())"
+    "X_test=pd.DataFrame(preprocessor.transform(X_test),columns=preprocessor.get_feature_names_out())\n",
+    "# #gi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -372,13 +413,25 @@
        "[135501 rows x 9 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.linear_model import LinearRegression,Lasso,ridge_regression\n",
+    "from sklearn.metrics import r2_score,mean_absolute_error,mean_squared_error"
    ]
   }
  ],
