--- a/experiment/experiments.ipynb
+++ b/experiment/experiments.ipynb
@@ -979,6 +979,89 @@
     "print('mae',mae)\n",
     "print('r2 score',r2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "models = {\n",
+    "    'Linear Regression': LinearRegression(),\n",
+    "    'Random Forest': RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "}\n",
+    "result={}\n",
+    "for i in range(len(list(models))):\n",
+    "    result[list(models.keys())[i]] = 66"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Linear Regression': 66, 'Random Forest': 66}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "models = {\n",
+    "    'Linear Regression':1,\n",
+    "    'Random Forest': 2\n",
+    "}\n",
+    "for i in range(len(models)):\n",
+    "    print(list(models.values())[i])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "models = {\n",
+    "    'Linear Regression':1,\n",
+    "    'Random Forest': 2,\n",
+    "    'Random Fores': 2\n",
+    "\n",
+    "}\n",
+    "print(len(models))"
+   ]
   }
  ],
  "metadata": {
